--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
         <div class="col-lg-10 align-self-end">
           <br>
           <br>
-
+          <br>
+          <br>
           <img class="logo" src="assets/img/scholarship-hvac-blue.png" alt="" />
-          <h1 class="text-uppercase tagline font-weight-bold">This one's for you, students</h1>
-          <hr class="divider my-4" />
-          <h1 class="text-uppercase tagline font-weight-bold">$25,000 in funding</h1>
+          <h1 class="text-uppercase tagline font-weight-bolder">This one's for you, students</h1>
+          <hr class="divider my-4">
+          <h2 class="text-uppercase font-weight-bold tagline tet-white">$25,000 in funding</h2>
         </div>
         <div class="logo">
           <div class="row h-100 align-items-center justify-content-center text-center">
-
           </div>
         </div>
         <br>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white font-weight-light mb-5">As young people, we are told that going to college and getting a 4 year degree is the only path to success and wealth. That could not be further from the truth. The skilled trades are the
             backbone of America and now more than ever, the opportunity to build a hugely successful and high paying career in HVAC is here to stay.<br><br> The urgency for skilled tradespeople is dire and is an industry new blood needs to be ushered
-            into. This scholarship will go to the individual who shows the heart, aptitude and promise to lead the next generation of HVAC into the future.<br><br> With this <b>$2,500 scholarship</b>, Housecall Pro will empower 20 students who will
+            into. This scholarship will go to the individual who shows the heart, aptitude and promise to lead the next generation of HVAC into the future.<br><br> With this <b>$2,500 scholarship</b>, Housecall Pro will empower 10 students who will
             become the next generation of
             HVAC professionals - from trade school, through your career as a technician, and one day becoming a home service business owner.<br><br> Apply for your scholarship today! Submissions close July 31st, 2021. Winner announced in August 2021.
           </p>
@@ -70,20 +70,23 @@
       </div>
     </div>
   </header>
-  <!-- About-->
+  <!-- Advice-->
   <section class="page-section bg-primary" id="advice">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 font-weight-bold text-uppercase">Do I need School for a career in HVAC?</h2>
+          <h1 class="mt-0 font-weight-bold text-uppercase">Do I need School for a career in HVAC?</h1>
           <hr class="divider-alt my-4" />
           <h3 class="mt-0 font-weight-bold"> <i>Hear from an HVAC pro!</i> </h3>
           <br>
-          <video class="center img-fluid vid" width="640" height="360" controls>
-            <source src="assets/video/why-i-went-to-trade-school.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-            Your browser does not support the video tag.
-          </video>
+          <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+            <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+              <div class="wistia_embed wistia_async_53cg1ocuzg videoFoam=true" style="height:100%;position:relative;width:100%">
+                <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/53cg1ocuzg/swatch"
+                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div>
+              </div>
+            </div>
+          </div>
           <p class="text-blac mb-4">See why <b>Mark Mazgan</b> - who lost everything in the housing crash of 2008 - decided to go back to school and become a member of the trades. Today, Mark owns <b>Mazgan Air Conditioning and Heating Repair</b>, a
             thriving HVAC
             business out of New York.
@@ -93,34 +96,64 @@
       </div>
     </div>
   </section>
-  <!-- Services-->
+  <!-- Evidence-->
   <section class="page-section" id="evidence">
-    <div class="container">
-      <h2 class="text-center font-weight-bold mt-0">By the Numbers</h2>
-      <hr class="divider my-4" />
-      <div class="col-lg-16 text-center">
-        <img class="img-fluid stats" src="assets/img/trade-stats.png">
+    <div class="col-container">
+      <h1 class="text-center text-uppercase font-weight-bold mt-0">By the Numbers</h1>
+      <hr class="divider my-4">
+      <div class="row">
+        <div class="image-wrapper column col-lg-6">
+          <figure class="image-1">
+            <img class="image-fig" src="assets/img/image06.png">
+            <br>
+            <br>
+            <h2 class="text-center text-uppercase font-weight-bold mt-0">College</h2>
+            <img class="factoid" src="assets/img/ROIc.jpg">
+            <img class="factoid2" src="assets/img/costc.jpg">
+            <img class="factoid3" src="assets/img/debtc.jpg">
+            <img class="factoid4" src="assets/img/salaryc.jpg">
+            <img class="factoid5" src="assets/img/earningsc.jpg">
+            <img class="factoid6" src="assets/img/savedc.jpg">
+            <img class="factoid7" src="assets/img/retirementc.jpg">
+          </figure>
+        </div>
+        <div class="image-wrapper column col-lg-6">
+          <figure class="image-2">
+            <img class="image-fig" src="assets/img/image05.png">
+            <br>
+            <br>
+            <h2 class="text-center text-uppercase font-weight-bold mt-0">Trade School</h2>
+            <img class="factoid" src="assets/img/ROIt.jpg">
+            <img class="factoid2" src="assets/img/costt.jpg">
+            <img class="factoid3" src="assets/img/debtt.jpg">
+            <img class="factoid4" src="assets/img/salaryt.jpg">
+            <img class="factoid5" src="assets/img/earningst.jpg">
+            <img class="factoid6" src="assets/img/savedt.jpg">
+            <img class="factoid7" src="assets/img/retirementt.jpg">
+          </figure>
+        </div>
       </div>
     </div>
+    <br>
+    <p class="text-center mt-0 font-weight-bold">*Assumes national average personal savings rate<br>**Assumes an average yearly return of 10% on savings</p>
   </section>
-  <!-- Portfolio-->
+  <!-- Apply-->
   <section class="page-section bg-primary" id="apply">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0 font-weight-bold text-uppercase">How to apply</h2>
           <hr class="divider-alt my-4" />
-          <h3 class="mt-0 font-weight-bold"> 1. Complete your Application</h3>
-          <p>This application does not offer any "save as you go," so we encourage you to write down and save these questions beforehand."
+          <h3 class="mt-0 font-weight-bold"> 1. Start your Application</h3>
+          <p>This application does not offer any "save as you go," so we encourage you to write down and save these questions beforehand. You can find a list of questions <a href="">here</a>.
             <br>
-          <h3 class="mt-0 font-weight-bold"> 2. In 2-3 sentences, please describe what the Next Generation HVAC Scholarship means to you.</h3>
+          <h3 class="mt-0 font-weight-bold"> 2. Be sure to read over our Terms & Conditions!</h3>
           <br>
-          <h3 class="mt-0 font-weight-bold"> 3. How would this scholarship money help you? </h3>
+          <h3 class="mt-0 font-weight-bold"> 3. Share your passion and motivation with your friends in HVAC!</h3>
           <br>
-          <p> After completing these three steps you're good to go!
-            <br>
-            <br>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#apply">Submit Now!</a>
+          <br>
+          <br>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="https://housecall.typeform.com/to/fRZJd2U9">Apply Now!</a>
         </div>
       </div>
     </div>
@@ -142,6 +175,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
   <!-- Core theme JS-->
+  <script src="https://fast.wistia.com/embed/medias/53cg1ocuzg.jsonp" async></script>
+  <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
   <script src="js/scripts.js"></script>
 </body>
 
